# simulateur_trafic_elkamel

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py  testingUploadedPackage.py
.github/workflows/: ci.yml
resultats/simulation_20251003_112412/: historique_20251003_112412.json  rapport_analyse_20251003_112412.txt  simulation_global_20251003_112412.csv  simulation_routes_20251003_112412.csv
resultats/simulation_20251003_112720/: historique_20251003_112720.json  rapport_analyse_20251003_112720.txt  simulation_routes_20251003_112720.csv
resultats/simulation_20251009_215447/: historique_20251009_215447.json  rapport_analyse_20251009_215447.txt  simulation_global_20251009_215447.csv
resultats/simulation_20251024_105103/: historique_20251024_105103.json  rapport_analyse_20251024_105103.txt
simulateur_trafic/: __init__.py  main.py
simulateur_trafic/core/: analyseur.py  simulateur.py
simulateur_trafic/core/exceptions/: exceptions.py
simulateur_trafic/data/: config_reseau.json
simulateur_trafic/inputOutput/: affichage.py  export.py
simulateur_trafic/models/: feu_rouge.py  reseau.py  route.py  vehicule.c  vehicule.py  vehicule.pyx
simulateur_trafic/models/__pycache__/: vehicule.calculer_nouvelle_vitesse-6.py310.1.nbc  vehicule.calculer_nouvelle_vitesse-6.py310.2.nbc  vehicule.calculer_nouvelle_vitesse-6.py310.nbi
simulateur_trafic/test/: conftest.py  test_feu_rouge.py  test_profilage.py  test_reseau.py  test_route.py  test_simulateur.py  test_vehicule.py
source/: conf.py
source/api/: simulateur_trafic.core.rst  simulateur_trafic.inputOutput.rst  simulateur_trafic.models.rst
source/modules/: core.rst  inputOutput.rst  models.rst
